Fix h1 on small screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -89,3 +89,7 @@ i{
 .small-p{
   font-size: .9em
 }
+
+.specialh1{
+  font-size: 4em; 
+}
